Fixups to wrap off the week

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -152,7 +152,7 @@ li[type='checkbox']::before {
 	content: var(--switch-marker);
 	background-color: var(--switch-background);
 	color: var(--switch-color);
-	font-family: var(--markout--body-font-family);
+	font-family: system-ui, var(--markout--body-font-family);
 	/* font-family: var(--markout--system-ui); */
 
 	overflow: hidden;
@@ -175,8 +175,9 @@ li[type='checkbox']::before {
 	vertical-align: text-top;
 	text-align: center;
 	text-indent: 0;
-	font-weight: 900;
+	font-weight: 800;
 	font-size: 75%;
+	font-style: initial;
 	transform: translateX(-1.75em) translateY(50%);
 	white-space: pre;
 }
